--- a/SMart/Views/Shared/_Layout.cshtml
+++ b/SMart/Views/Shared/_Layout.cshtml
@@ -35,6 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Transactions" asp-action="Index">Transactions</a>
                         </li>
                     </ul>
+                    <partial name="_LoginPartial"></partial>
                 </div>
             </div>
         </nav>
